chore(README,examples/) Adding sideEffects note

--- a/examples/validationwebhook.yaml
+++ b/examples/validationwebhook.yaml
@@ -4,6 +4,7 @@ metadata:
   name: example-webhook
 webhooks:
   - name: aegir.example.svc
+    sideEffects: NoneOnDryRun
     clientConfig:
       service:
         name: aegir
