--- a/internal/pkg/rules/testing_rules.yaml
+++ b/internal/pkg/rules/testing_rules.yaml
@@ -15,4 +15,18 @@ rules:
       rule:
         name:
           eq: 'erick'
+  - field: "spec.containers.#.THIS_PATH_DOES_NOT_EXIST"
+    field_is_optional: true
+    livr_rule:
+      description: "This field is optional and should not fail if it does not exists"
+      rule:
+        name:
+          eq: 'erick'
+  - field: "spec.containers.#.THIS_PATH_DOES_NOT_EXIST_BUT_MUST"
+    field_is_optional: false
+    livr_rule:
+      description: "This field is NOT optional and should fail if it does not exists"
+      rule:
+        name:
+          eq: 'erick'
   slack_notification_channel: "#gac-notifications"
